--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,5 @@ install:
  - export PATH=$PATH:$PWD/go_appengine/
 
 script:
- - goapp get code.google.com/p/google-api-go-client/googleapi/transport
- - goapp get code.google.com/p/google-api-go-client/plus/v1
+ - goapp get ./...
  - goapp test
